--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           create-repo: true
           dockerfile: ./docker/nginx/Dockerfile
-          repo: mogstagram-puma
+          repo: nginx
           tag: "${CIRCLE_SHA1}"
           filters:
             branches:
@@ -35,7 +35,7 @@ workflows:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           create-repo: true
           dockerfile: ./docker/rails/Dockerfile
-          repo: mogstagram-rails
+          repo: rails
           tag: "${CIRCLE_SHA1}"
           filters:
             branches:
