--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,13 @@ workflows:
           filters:
             branches:
               only: master
-      # - aws-ecs/deploy-service-update:
-      #     requires:
-      #       - aws-ecr/build-and-push-image
-      #     family: 'nginx-rails-app' # ECSのタスク定義名
-      #     cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
-      #     service-name: 'test'  #サービス名
-      #     container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image
+          family: 'nginx-rails-app' # ECSのタスク定義名
+          cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
+          service-name: 'ecs-rails-service'  #サービス名
+          container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
   # Railsのデプロイ
   rails-deploy:
     jobs:
@@ -40,13 +40,13 @@ workflows:
           filters:
             branches:
               only: master
-      # - aws-ecs/deploy-service-update:
-      #     requires:
-      #       - aws-ecr/build-and-push-image
-      #     family: 'nginx-rails-app' # ECSのタスク定義名
-      #     cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
-      #     service-name: 'test' #サービス名
-      #     container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image
+          family: 'nginx-rails-app' # ECSのタスク定義名
+          cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
+          service-name: 'ecs-rails-service' #サービス名
+          container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
 
   
 #AWS_ECR_ACCOUNT_URL => ${アカウントID}.dkr.ecr.${リージョン}.amazonaws.com
