--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.20
 
 jobs:
-  db_migrate:
+  build:
     executor: aws-cli/default
     steps:
       - checkout
@@ -15,6 +15,7 @@ jobs:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_REGION
+      - run: echo "hello build job"
       # - run:
       #     name: "db migrate"
       #     command: |
@@ -25,47 +26,47 @@ jobs:
 
 workflows:
   # Nginxのデプロイ
-  nginx-deploy:
-    jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          region: AWS_REGION
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          dockerfile: ./docker/nginx/Dockerfile
-          repo: nginx
-          tag: "${CIRCLE_SHA1}"
-          filters:
-            branches:
-              only: master
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
-          family: 'nginx-rails-app' # ECSのタスク定義名
-          cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
-          service-name: 'ecs-rails-service'  #サービス名
-          container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
-  # Railsのデプロイ
-  rails-deploy:
-    jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          region: AWS_REGION
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          dockerfile: ./docker/rails/Dockerfile
-          repo: rails
-          tag: "${CIRCLE_SHA1}"
-          filters:
-            branches:
-              only: master
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
-          family: 'nginx-rails-app' # ECSのタスク定義名
-          cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
-          service-name: 'ecs-rails-service' #サービス名
-          container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
-      - db_migrate:
+  # nginx-deploy:
+  #   jobs:
+  #     - aws-ecr/build-and-push-image:
+  #         account-url: AWS_ECR_ACCOUNT_URL
+  #         region: AWS_REGION
+  #         aws-access-key-id: AWS_ACCESS_KEY_ID
+  #         aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+  #         create-repo: true
+  #         dockerfile: ./docker/nginx/Dockerfile
+  #         repo: nginx
+  #         tag: "${CIRCLE_SHA1}"
+  #         filters:
+  #           branches:
+  #             only: master
+  #     - aws-ecs/deploy-service-update:
+  #         requires:
+  #           - aws-ecr/build-and-push-image
+  #         family: 'nginx-rails-app' # ECSのタスク定義名
+  #         cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
+  #         service-name: 'ecs-rails-service'  #サービス名
+  #         container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
+  # # Railsのデプロイ
+  # rails-deploy:
+  #   jobs:
+  #     - aws-ecr/build-and-push-image:
+  #         account-url: AWS_ECR_ACCOUNT_URL
+  #         region: AWS_REGION
+  #         aws-access-key-id: AWS_ACCESS_KEY_ID
+  #         aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+  #         create-repo: true
+  #         dockerfile: ./docker/rails/Dockerfile
+  #         repo: rails
+  #         tag: "${CIRCLE_SHA1}"
+  #         filters:
+  #           branches:
+  #             only: master
+  #     - aws-ecs/deploy-service-update:
+  #         requires:
+  #           - aws-ecr/build-and-push-image
+  #         family: 'nginx-rails-app' # ECSのタスク定義名
+  #         cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
+  #         service-name: 'ecs-rails-service' #サービス名
+  #         container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
+      - build:
