--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ orbs:
 
 jobs:
   build:
-    executor: aws-cli/default
+    docker:
+      - image: circleci/python:3.7
     steps:
       - checkout
       - aws-cli/setup:
