--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,3 +67,4 @@ workflows:
           cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
           service-name: 'ecs-rails-service' #サービス名
           container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
+      - build
