--- a/docker/mysql/password.yml
+++ b/docker/mysql/password.yml
@@ -2,7 +2,6 @@ version: '2'
 services:
   password:
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
+      MYSQL_HOST: ${MYSQL_HOST}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       TZ: "Asia/Tokyo"
