--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@
 
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@6.7.0
-  aws-ecs: circleci/aws-ecs@1.1.0
+  # aws-ecr: circleci/aws-ecr@6.7.0
+  # aws-ecs: circleci/aws-ecs@1.1.0
   aws-cli: circleci/aws-cli@0.1.20
 
 jobs:
-  db-migrate:
+  build:
     executor: aws-cli/default
     steps:
       - checkout
@@ -25,49 +25,49 @@ jobs:
           working_directory: app
 
 
-workflows:
-  nginx-deploy:
-    jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          region: AWS_REGION
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          dockerfile: ./docker/nginx/Dockerfile
-          repo: nginx
-          tag: "${CIRCLE_SHA1}"
-          filters:
-            branches:
-              only: master
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
-          family: 'nginx-rails-app' # ECSのタスク定義名
-          cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
-          service-name: 'ecs-rails-service'  #サービス名
-          container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
-  rails-deploy:
-    jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          region: AWS_REGION
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          dockerfile: ./docker/rails/Dockerfile
-          repo: rails
-          tag: "${CIRCLE_SHA1}"
-          filters:
-            branches:
-              only: master
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
-          family: 'nginx-rails-app' # ECSのタスク定義名
-          cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
-          service-name: 'ecs-rails-service' #サービス名
-          container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
-      - db-migrate:
-          requires:
-            - aws-ecs/deploy-service-update
+# workflows:
+#   nginx-deploy:
+#     jobs:
+#       - aws-ecr/build-and-push-image:
+#           account-url: AWS_ECR_ACCOUNT_URL
+#           region: AWS_REGION
+#           aws-access-key-id: AWS_ACCESS_KEY_ID
+#           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+#           create-repo: true
+#           dockerfile: ./docker/nginx/Dockerfile
+#           repo: nginx
+#           tag: "${CIRCLE_SHA1}"
+#           filters:
+#             branches:
+#               only: master
+#       - aws-ecs/deploy-service-update:
+#           requires:
+#             - aws-ecr/build-and-push-image
+#           family: 'nginx-rails-app' # ECSのタスク定義名
+#           cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
+#           service-name: 'ecs-rails-service'  #サービス名
+#           container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
+#   rails-deploy:
+#     jobs:
+#       - aws-ecr/build-and-push-image:
+#           account-url: AWS_ECR_ACCOUNT_URL
+#           region: AWS_REGION
+#           aws-access-key-id: AWS_ACCESS_KEY_ID
+#           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+#           create-repo: true
+#           dockerfile: ./docker/rails/Dockerfile
+#           repo: rails
+#           tag: "${CIRCLE_SHA1}"
+#           filters:
+#             branches:
+#               only: master
+#       - aws-ecs/deploy-service-update:
+#           requires:
+#             - aws-ecr/build-and-push-image
+#           family: 'nginx-rails-app' # ECSのタスク定義名
+#           cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
+#           service-name: 'ecs-rails-service' #サービス名
+#           container-image-name-updates: "container=rails,tag=${CIRCLE_SHA1}"
+#       - db-migrate:
+#           requires:
+#             - aws-ecs/deploy-service-update
