--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,24 @@ jobs:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_REGION
+      # - run:
+      #     name: "db create"
+      #     command: |
+      #       aws ecs run-task --region $AWS_REGION \
+      #         --cluster $ECS_ARN \
+      #         --task-definition nginx-rails-app \
+      #         --overrides '{"containerOverrides": [{"name": "rails","command": ["rails", "db:create"]}]}'
+      #     working_directory: app
       - run:
           name: "db migrate"
+          command: |
+            aws ecs run-task --region $AWS_REGION \
+              --cluster $ECS_ARN \
+              --task-definition nginx-rails-app \
+              --overrides '{"containerOverrides": [{"name": "rails","command": ["rails", "db:migrate"]}]}'
+          working_directory: app
+      - run:
+          name: "db seed"
           command: |
             aws ecs run-task --region $AWS_REGION \
               --cluster $ECS_ARN \
